<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".RegistrationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="Regisztráció"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#B1AFAF"
        android:padding="12dp"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#B1AFAF"
        android:padding="12dp"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/regpass"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#B1AFAF"
        android:padding="12dp"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passcheck"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#B1AFAF"
        android:padding="12dp"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:onClick="register"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/blue"
        android:padding="12dp"
        tools:ignore="OnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/login"
        android:onClick="log"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:layout_marginRight="65dp"
        tools:ignore="OnClick" />

</LinearLayout>
