<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#B2DFDB"
    tools:context=".ProfileActivity">


<com.google.android.material.textfield.TextInputLayout
android:id="@+id/tilUsername"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:hint="@string/username"
app:boxBackgroundMode="filled"
app:boxBackgroundColor="#00796B"
    app:boxStrokeColor="#FFFFFF"
    android:layout_margin="16dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

<com.google.android.material.textfield.TextInputEditText
android:id="@+id/etUsername"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:textColor="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>


<com.google.android.material.textfield.TextInputLayout
android:id="@+id/tilPassword"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:hint="@string/password"
app:passwordToggleEnabled="true"
app:boxBackgroundMode="filled"
app:boxBackgroundColor="#00796B"
app:boxStrokeColor="#FFFFFF"
android:layout_marginStart="16dp"
android:layout_marginEnd="16dp"
android:layout_marginTop="8dp"
app:layout_constraintTop_toBottomOf="@id/tilUsername"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent">

<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/etPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="#FFFFFF" />
</com.google.android.material.textfield.TextInputLayout>


<com.google.android.material.button.MaterialButton
android:id="@+id/btnSave"
style="@style/Widget.MaterialComponents.Button"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_marginTop="16dp"
android:layout_marginStart="16dp"
android:layout_marginEnd="8dp"
android:text="@string/save_data"
android:textColor="#FFFFFF"
android:backgroundTint="#00796B"
app:layout_constraintTop_toBottomOf="@id/tilPassword"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toStartOf="@+id/btnDelete" />


<com.google.android.material.button.MaterialButton
    android:id="@+id/btnDelete"
    style="@style/Widget.MaterialComponents.Button"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="16dp"
    android:text="@string/delete_profil"
    android:textColor="#FFFFFF"
    android:backgroundTint="#D32F2F"
    app:layout_constraintTop_toBottomOf="@id/tilPassword"
    app:layout_constraintStart_toEndOf="@+id/btnSave"
    app:layout_constraintEnd_toEndOf="parent" />


<com.google.android.material.bottomnavigation.BottomNavigationView
android:id="@+id/bottom_navigation"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:background="#00796B"
app:itemIconTint="@android:color/white"
app:itemTextColor="@android:color/white"
app:itemRippleColor="@android:color/white"
app:menu="@menu/main_menu"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
